--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div id="navbar",  style="position: fixed; z-index: 1;">
 
     
-    <a href="index0.html">
+    <a href="index.html">
         <img id="Logo" src="Image/Logo2_Hover.svg" alt="Logo">
     </a>
     
